fix(css): text overflow

--- a/css/style.css
+++ b/css/style.css
@@ -792,7 +792,6 @@ section {
 }
 .card__title, .card__text {
   display: block;
-  width: inherit;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
