--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -31,7 +31,6 @@
   &__title,
   &__text {
     display: block;
-    width: inherit;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
